fix stuck at next year because of fish back and forth + fix slliders console

--- a/css/sliders.css
+++ b/css/sliders.css
@@ -8,8 +8,9 @@
   align-items: flex-end;
 
   /* Transition */
-  position: relative;
+  position: absolute;
   bottom: 0;
+  transform: translateX(calc(-100% - 25px));
   transition: 1s;
 }
 
